# lofi-video-generator

./: .dockerignore  .env.example  .gitignore  API_ANALYSIS_SUMMARY_AR.md  API_FIXES_REPORT.md  AUTOMATION_GUIDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  FALLBACK_FIX.md  FIXES_CHANGELOG.md  HETZNER_DEPLOYMENT_GUIDE_AR.md  INSTALLATION.md  LICENSE  OPENROUTER_GUIDE_AR.md  QUICK_REFERENCE.md  README.md  README_NEW.md  USAGE_GUIDE_AR.md  WEB_INTERFACE_GUIDE.md  acestep_bridge.py  ai_orchestrator.py  automation_pipeline.py  config.py  docker-compose.prod.yml  docker-compose.yml  ffmpeg_utils.py  fix_gemini_quota.py  free_music_provider.py  gemini_integration.py  history.json  install.sh  kie_ai_integration.py  lofi_video_generator.py  openrouter_integration.py  pexels_integration.py  prompt_intelligence.py  pyproject.toml  requirements.txt  stream_scheduler.py  thumbnail_generator.py  (+7 more)
examples/: USAGE_EXAMPLES.md  example_config.json
lofi_gen/: __init__.py  api_v2.py  auth.py  setup_web.py  tasks.py
lofi_gen/ai/: __init__.py  gemini_client.py  openrouter_client.py  orchestrator.py  prompt_system.py
lofi_gen/api/: __init__.py  __main__.py
lofi_gen/cli/: __init__.py  __main__.py
lofi_gen/core/: __init__.py  config.py  logging.py  types.py
lofi_gen/db/: __init__.py  connection.py  models.py
lofi_gen/media/: __init__.py  audio_engine.py  free_music.py  kie_client.py  pexels_client.py  text_overlay.py  video_engine.py
lofi_gen/pipeline/: __init__.py  pipeline.py
lofi_gen/web/: __init__.py  __main__.py
tests/: __init__.py  test_auth.py  test_config.py  test_prompt_system.py  test_video_engine.py
